# amacro

./: .gitignore  .project  .pydevproject  Accounts.py  Adb.py  CMakeLists.txt  Device.py  Devices.py  GSpread.py  GuiSettings.py  Image.py  OCR.py  Settings.py  Users.py  VM.py  Vpn.py  YouTube.py  build.cmd  client_secrets.json  gui.cmd  gui.py  gui.sh  log.json  logger.py  macro.py  nothreads.py  printing.py  readme.txt  run.py  run_template.py  run_template_levelup.py  stats.txt  tessconfig  threads.py  tools.py
androVM/: build  download  mybuild  setup
contents/: gimp.cmd
contents/android/: asroot  get_android_id  getevent
contents/data/: accounts.txt  nick_seeds_joey.txt  nick_seeds_new.txt
contents/info/: accounts.txt  fakeEmails.txt  fakeID.txt
info/: accounts.txt  emails.txt  fakeAccounts.txt  fakeEmails.txt  fakeID.txt  nick_seeds.txt  nick_seeds2.txt  results.txt
scripts/: adb  check_logs.sh  mount_ramdisk  ssh_bypass  vbox
scripts/client/: adb  ssh_bypass  vbox
scripts/device/: get_pid_memory_locations  partial_screenshot  screenshot  screenshot_dec2x  screenshot_ref  swipe
tesseract/enemy_list/: train
tesseract/status_screen/: non.statusnumbers.exp0.xcf
tesseract/train/: train  train_status_screen
woh/: assemble_current  disassemble  keystore  replace  replace_and_assemble  s3_build.prop  script
